--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@reduxjs/toolkit": "^1.5.1",
     "@types/uuid": "^8.3.0",
     "rpg-table-randomizer": "^0.10.0",
     "rxjs": "~6.6.0",
