--- a/package.json
+++ b/package.json
@@ -26,21 +26,21 @@
     "url": "https://github.com/derikb/hadleyville-online/issues"
   },
   "homepage": "https://github.com/derikb/hadleyville-online#readme",
-  "browserslist": [
-    "supports es6-module"
-  ],
   "dependencies": {
     "@angular/animations": "~11.2.9",
+    "@angular/cdk": "^11.2.12",
     "@angular/common": "~11.2.9",
     "@angular/compiler": "~11.2.9",
     "@angular/core": "~11.2.9",
     "@angular/forms": "~11.2.9",
+    "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
     "@reduxjs/toolkit": "^1.5.1",
     "@types/uuid": "^8.3.0",
     "markdown-it": "^12.0.6",
+    "redux-localstorage-simple": "^2.4.0",
     "rpg-table-randomizer": "^0.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
