--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,11 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "markdown-it",
+              "redux-localstorage-simple"
+            ]
           },
           "configurations": {
             "production": {
