--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^1.7.2",
     "@types/uuid": "^8.3.4",
     "a11y-dialog": "^7.3.0",
+    "kagekiri": "^1.4.1",
     "markdown-it": "^12.3.2",
     "redux-localstorage-simple": "^2.4.0",
     "rpg-table-randomizer": "^1.3.0",
